--- a/src/main/resources/templates/request_fail.html
+++ b/src/main/resources/templates/request_fail.html
@@ -15,8 +15,6 @@
 <div align="center">
     <h2>Request Failed!</h2>
 </div>
-
-
-<a href="http://localhost:8088/clients/register">Register form</a>
+<a href="http://localhost:8088/">back to menu</a>
 </body>
 </html>
