--- a/src/main/resources/templates/request_success.html
+++ b/src/main/resources/templates/request_success.html
@@ -15,6 +15,6 @@
 <div align="center">
     <h2>Request Succeeded!</h2>
 </div>
-<a href="http://localhost:8088/forecasts/request">Request again</a>
+<a href="http://localhost:8088/">back to menu</a>
 </body>
 </html>
