CRUD views added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,8 +16,8 @@
 <form action="http://localhost:8088/feedbacks/list">
     <input type="submit" value="Go to feedbacks CRUD" />
 </form>
-<form action="http://localhost:8088/ingridients/list">
-    <input type="submit" value="Go to ingridients CRUD" />
+<form action="http://localhost:8088/ingredients/list">
+    <input type="submit" value="Go to ingredients CRUD" />
 </form>
 <form action="http://localhost:8088/orders/list">
     <input type="submit" value="Go to orders CRUD" />
