--- a/src/main/resources/templates/request_success.html
+++ b/src/main/resources/templates/request_success.html
@@ -15,6 +15,8 @@
 <div align="center">
     <h2>Request Succeeded!</h2>
 </div>
-<a href="http://localhost:8088/">back to menu</a>
+<form action="http://localhost:8088/">
+    <input type="submit" value="Back to menu" />
+</form>
 </body>
 </html>
