--- a/src/main/resources/templates/restaurant_form.html
+++ b/src/main/resources/templates/restaurant_form.html
@@ -28,32 +28,8 @@
         </td>
     </tr>
 </table>
-<form action="http://localhost:8088/accounts/list">
-    <input type="submit" value="Go to accounts CRUD" />
-</form>
-<form action="http://localhost:8088/addresses/list">
-    <input type="submit" value="Go to addresses CRUD" />
-</form>
-<form action="http://localhost:8088/feedbacks/list">
-    <input type="submit" value="Go to feedbacks CRUD" />
-</form>
-<form action="http://localhost:8088/ingridients/list">
-    <input type="submit" value="Go to ingridients CRUD" />
-</form>
-<form action="http://localhost:8088/orders/list">
-    <input type="submit" value="Go to orders CRUD" />
-</form>
-<form action="http://localhost:8088/pizzas/list">
-    <input type="submit" value="Go to pizzas CRUD" />
-</form>
-<form action="http://localhost:8088/restaurants/list">
-    <input type="submit" value="Go to restaurants CRUD" />
-</form>
-<form action="http://localhost:8088/roles/list">
-    <input type="submit" value="Go to restaurants CRUD" />
-</form>
-<form action="http://localhost:8088/sideitems/list">
-    <input type="submit" value="Go to side items CRUD" />
+<form action="http://localhost:8088/">
+    <input type="submit" value="Back to menu" />
 </form>
 
 
