CRUD views added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
     <input type="submit" value="Go to restaurants CRUD" />
 </form>
 <form action="http://localhost:8088/roles/list">
-    <input type="submit" value="Go to restaurants CRUD" />
+    <input type="submit" value="Go to roles CRUD" />
 </form>
 <form action="http://localhost:8088/sideitems/list">
     <input type="submit" value="Go to side items CRUD" />
