--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
 >
@@ -14,7 +15,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" ariacontrols="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                ariacontrols="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -26,39 +28,37 @@
         </div>
     </div>
 </nav>
-<br /><br />
-<div class="container">
-    <div class="row">
-        <h1 class="text-center"> Registration and Login System </h1>
-    </div>
-</div>
+<br/><br/>
+<th:block th:if="${#authentication.principal?.getClass()?.getSimpleName() == 'UsernamePasswordAuthenticationToken'}">
+    <div>Welcome, <span th:text="${#authentication.principal.username}"></span></div>
+</th:block>
 
 <form action="http://localhost:8088/accounts/list">
-    <input type="submit" value="Go to accounts CRUD" />
+    <input type="submit" value="Go to accounts CRUD"/>
 </form>
 <form action="http://localhost:8088/addresses/list">
-    <input type="submit" value="Go to addresses CRUD" />
+    <input type="submit" value="Go to addresses CRUD"/>
 </form>
 <form action="http://localhost:8088/feedbacks/list">
-    <input type="submit" value="Go to feedbacks CRUD" />
+    <input type="submit" value="Go to feedbacks CRUD"/>
 </form>
 <form action="http://localhost:8088/ingredients/list">
-    <input type="submit" value="Go to ingredients CRUD" />
+    <input type="submit" value="Go to ingredients CRUD"/>
 </form>
 <form action="http://localhost:8088/orders/list">
-    <input type="submit" value="Go to orders CRUD" />
+    <input type="submit" value="Go to orders CRUD"/>
 </form>
 <form action="http://localhost:8088/pizzas/list">
-    <input type="submit" value="Go to pizzas CRUD" />
+    <input type="submit" value="Go to pizzas CRUD"/>
 </form>
 <form action="http://localhost:8088/restaurants/list">
-    <input type="submit" value="Go to restaurants CRUD" />
+    <input type="submit" value="Go to restaurants CRUD"/>
 </form>
 <form action="http://localhost:8088/roles/list">
-    <input type="submit" value="Go to roles CRUD" />
+    <input type="submit" value="Go to roles CRUD"/>
 </form>
 <form action="http://localhost:8088/sideitems/list">
-    <input type="submit" value="Go to side items CRUD" />
+    <input type="submit" value="Go to side items CRUD"/>
 </form>
 </body>
 </html>
