--- a/src/main/resources/templates/request_fail.html
+++ b/src/main/resources/templates/request_fail.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Registration Success</title>
+    <title>Registration Fail</title>
     <style type="text/css">
         span {
             display: inline-block;
