--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,33 +33,35 @@
     <div>Welcome, <span th:text="${#authentication.principal.username}"></span></div>
 </th:block>
 
-<form action="http://localhost:8088/accounts/list">
-    <input type="submit" value="Go to accounts CRUD"/>
-</form>
-<form action="http://localhost:8088/addresses/list">
-    <input type="submit" value="Go to addresses CRUD"/>
-</form>
-<form action="http://localhost:8088/feedbacks/list">
-    <input type="submit" value="Go to feedbacks CRUD"/>
-</form>
-<form action="http://localhost:8088/ingredients/list">
-    <input type="submit" value="Go to ingredients CRUD"/>
-</form>
-<form action="http://localhost:8088/orders/list">
-    <input type="submit" value="Go to orders CRUD"/>
-</form>
-<form action="http://localhost:8088/pizzas/list">
-    <input type="submit" value="Go to pizzas CRUD"/>
-</form>
-<form action="http://localhost:8088/restaurants/list">
-    <input type="submit" value="Go to restaurants CRUD"/>
-</form>
-<form action="http://localhost:8088/roles/list">
-    <input type="submit" value="Go to roles CRUD"/>
-</form>
-<form action="http://localhost:8088/sideitems/list">
-    <input type="submit" value="Go to side items CRUD"/>
-</form>
+<header>
+    <form action="http://localhost:8088/accounts/list">
+        <input type="submit" value="Go to accounts CRUD"/>
+    </form>
+    <form action="http://localhost:8088/addresses/list">
+        <input type="submit" value="Go to addresses CRUD"/>
+    </form>
+    <form action="http://localhost:8088/feedbacks/list">
+        <input type="submit" value="Go to feedbacks CRUD"/>
+    </form>
+    <form action="http://localhost:8088/ingredients/list">
+        <input type="submit" value="Go to ingredients CRUD"/>
+    </form>
+    <form action="http://localhost:8088/orders/list">
+        <input type="submit" value="Go to orders CRUD"/>
+    </form>
+    <form action="http://localhost:8088/pizzas/list">
+        <input type="submit" value="Go to pizzas CRUD"/>
+    </form>
+    <form action="http://localhost:8088/restaurants/list">
+        <input type="submit" value="Go to restaurants CRUD"/>
+    </form>
+    <form action="http://localhost:8088/roles/list">
+        <input type="submit" value="Go to roles CRUD"/>
+    </form>
+    <form action="http://localhost:8088/sideitems/list">
+        <input type="submit" value="Go to side items CRUD"/>
+    </form>
+</header>
 </body>
 </html>
 
