--- a/src/main/resources/templates/feedback_editform.html
+++ b/src/main/resources/templates/feedback_editform.html
@@ -2,9 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Role Form</title>
+    <title>Pizza Form</title>
     <link rel="stylesheet" type="text/css" href="/css/pizza.css">
 </head>
+
 <body>
 <header>
     <form action="http://localhost:8088/accounts/list">
@@ -35,41 +36,21 @@
         <input type="submit" value="Go to side items CRUD"/>
     </form>
 </header>
-<table>
-    <tr>
-        <th>id</th>
-        <th>Name</th>
-
-    </tr>
-    <tr th:each="role,iterStat : ${roles}" th:class="${iterStat.odd}? 'odd' : 'even'">
-        <td th:text="${role.id}"></td>
-        <td th:text="${role.name}"></td>
-        <td>
-            <form th:action="@{'/roles/edit/' + ${role.id}}" th:method="get">
-                <button type="submit">Edit</button>
-            </form>
-        </td>
-        <td>
-            <form th:action="@{'/roles/delete/' + ${role.id}}" th:method="get">
-                <button type="submit">Delete</button>
-            </form>
-        </td>
-    </tr>
-</table>
-<form action="http://localhost:8088/">
-    <input type="submit" value="Back to menu" />
-</form>
 
 <div align="center">
-    <h2>Create Role</h2>
-    <form th:action="@{/roles/create_role}" th:method="post" th:object="${role}" >
 
-        <label for="name">Name:</label>
-        <input type="text" id="name" th:field="*{name}"/><br/>
-
-        <button type="submit">Create</button>
+    <form th:action="@{/feedbacks/create_feedback}" th:method="post" th:object="${feedback}" style="width: 70%">
+        <h2>Submit feedback</h2>
+        <input type="hidden" th:field="*{id}"/>
+        <input type="hidden" th:field="*{user.id}"/>
+        <input type="hidden" th:field="*{order.id}"/>
+        <h3>Rate your order!</h3>
+        <input type="range" id="score" name="score" min="1" max="5" th:field="*{score}">
+        <h2>Write your comment:</h2>
+        <textarea  type="text" id="comment" style="height: 400px" th:field="*{comment}"></textarea><br/>
+        <button type="submit">Submit</button>
     </form>
-
 </div>
+
 </body>
 </html>
