--- a/src/main/resources/templates/order_form.html
+++ b/src/main/resources/templates/order_form.html
@@ -7,6 +7,35 @@
 </head>
 <body>
 <body>
+<header>
+    <form action="http://localhost:8088/accounts/list">
+        <input type="submit" value="Go to accounts CRUD"/>
+    </form>
+    <form action="http://localhost:8088/addresses/list">
+        <input type="submit" value="Go to addresses CRUD"/>
+    </form>
+    <form action="http://localhost:8088/feedbacks/list">
+        <input type="submit" value="Go to feedbacks CRUD"/>
+    </form>
+    <form action="http://localhost:8088/ingredients/list">
+        <input type="submit" value="Go to ingredients CRUD"/>
+    </form>
+    <form action="http://localhost:8088/orders/list">
+        <input type="submit" value="Go to orders CRUD"/>
+    </form>
+    <form action="http://localhost:8088/pizzas/list">
+        <input type="submit" value="Go to pizzas CRUD"/>
+    </form>
+    <form action="http://localhost:8088/restaurants/list">
+        <input type="submit" value="Go to restaurants CRUD"/>
+    </form>
+    <form action="http://localhost:8088/roles/list">
+        <input type="submit" value="Go to roles CRUD"/>
+    </form>
+    <form action="http://localhost:8088/sideitems/list">
+        <input type="submit" value="Go to side items CRUD"/>
+    </form>
+</header>
 <table>
     <thead>
     <tr>
@@ -66,9 +95,10 @@
 
 
 <!-- User assignment -->
-<h2>Create Order</h2>
+
 <div th:if="${stage == 1}" align="center">
     <form th:action="@{/orders/create_order_1}" th:method="post" th:object="${newOrder}">
+        <h2>Create Order</h2>
         User:
         <select id="userSelection" th:field="*{user}">
             <option th:each="user : ${users}" th:if="${user.isActivated}" th:value="${user.id}" th:text="${user.name}">
